--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     text-decoration: none;
     scroll-padding-top: 2rem;
     scroll-behavior: smooth;
+    
 }
 
 :root {
@@ -128,7 +129,7 @@ header {
     min-height: 640px;
     display: flex;
     align-items: center;
-    background: url(img6.jpg);
+    background: url(wall2.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -138,8 +139,8 @@ header {
 .container img {
     width: 400px;
     position: absolute;
-    bottom: -500px;
-    right: 200px;
+    bottom: 100px;
+    right: 300px;
 }
 
 .home-text {
@@ -157,7 +158,7 @@ header {
     font-size: 2.4rem;
     font-weight: 700;
     margin-bottom: 1rem;
-    color: #fff;
+    /* color: #fff; */
 
 }
 
@@ -225,6 +226,7 @@ header {
     max-width: 986px;
     margin-left: auto;
     margin-right: auto;
+    /* background-image: url(wall.jpg); */
 }
 
 .categories-container {
